# django-approval

./: .gitignore  DOCUMENTATION.md  LICENSE  MANIFEST.in  README.md  docgeneration.py  pyproject.toml  requirements.dev.txt  setup.py
.run/: Generate documentation.run.xml
approval/: __init__.py  setup.py
approval/admin/: __init__.py  approval.py
approval/docs/: install.md  markdown.css
approval/forms/: __init__.py  approvable.py
approval/listeners/: __init__.py  approvable.py
approval/locale/fr/LC_MESSAGES/: django.mo  django.po
approval/models/: __init__.py  approvable.py  approval.py  edits.py  registry.py
approval/templates/approval/display/: sandbox-data.html
approval/templatetags/: __init__.py  approval_tags.py
approval/util/: moderator.py  shortcuts.py  signals.py  types.py
docs/: approval.html  index.html  search.js
docs/approval/: admin.html  apps.html  forms.html  listeners.html  models.html  settings.html  signals.html  templatetags.html
docs/approval/admin/: monitored.html  sandbox.html
docs/approval/forms/: monitored.html
docs/approval/listeners/: monitored.html
docs/approval/models/: monitored.html  monitoring.html
docs/approval/templatetags/: approval.html
documentation/: approval.html  search.js
documentation/approval/: apps.html  listeners.html  models.html  signals.html  templatetags.html
documentation/approval/admin/: monitored.html  sandbox.html
documentation/approval/forms/: monitored.html
documentation/approval/models/: monitored.html
documentation/approval/templatetags/: approval.html
scenario/content/admin/: entry.py
scenario/content/locale/fr/LC_MESSAGES/: django.mo  django.po
scenario/content/migrations/: 0002_entryapproval_uuid_alter_entryapproval_source.py
scenario/content/models/: __init__.py  entry.py
scenario/scenario/: asgi.py  wsgi.py
source/approval/: __init__.py  apps.py
source/approval/admin/: monitored.py
source/approval/forms/: __init__.py
source/approval/listeners/: __init__.py  monitored.py
source/approval/models/: __init__.py
source/approval/templatetags/: approval.py
source/scenario/: manage.py
source/scenario/content/admin/: __init__.py
source/scenario/content/locale/fr/LC_MESSAGES/: django.mo  django.po
source/scenario/content/migrations/: 0001_initial.py  0002_entryapproval_uuid_alter_entryapproval_source.py
source/scenario/content/models/: entry.py
source/scenario/content/querysets/: __init__.py  entry.py
source/scenario/scenario/: logging.conf  settings.py  urls.py
src/approval/: settings.py  signals.py
src/approval/admin/: __init__.py  monitored.py  sandbox.py
src/approval/forms/: monitored.py
src/approval/listeners/: monitored.py
src/approval/locale/fr/LC_MESSAGES/: django.mo  django.po
src/approval/models/: monitored.py  monitoring.py
src/approval/templates/approval/display/: sandbox-data.html
