[build-system]
requires = ["setuptools>=61.0", "django>=3.2", "django-annoying"]
build-backend = "setuptools.build_meta"

[project]
name = "approval"
version = "0.11"
authors = [
  { name="Steve Kossouho", email="skossouho@dawan.fr" },
]
description = "Easily moderate any content before it's visible to the public."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: Django",
]

[project.urls]
"Homepage" = "https://github.com/artscoop/django-approval"
"Bug Tracker" = "https://github.com/artscoop/django-approval/issues"
"Documentation" = "https://artscoop.github.io/django-approval/approval.html"

[tool.black]
line-length = 100

[tool.setuptools]
package-dir = {"" = "source"}
packages = ["approval"]
