[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "django-approval"
version = "0.12.0"
authors = [
  { name="Steve Kossouho", email="skossouho@dawan.fr" },
]
description = "Easily moderate any content in Django before it's visible to the public."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: Django",
]
dependencies = [
    "django>=3.2",
    "django-annoying",
]

[project.urls]
"Homepage" = "https://github.com/artscoop/django-approval"
"Bug Tracker" = "https://github.com/artscoop/django-approval/issues"
"Documentation" = "https://artscoop.github.io/django-approval/approval.html"

[tool.black]
line-length = 100

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
namespaces = true
where = ["src"]
